src/objects/Social_Post__c.object
<CustomObject>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>Attendee__c</referenceTo>
        <relationshipLabel>Social Posts</relationshipLabel>
        <relationshipName>Social_Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Social Posts</relationshipLabel>
        <relationshipName>Social_Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Social Posts</relationshipLabel>
        <relationshipName>Social_Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Created_Date_Time__c</fullName>
        <label>External Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Favorite_Count__c</fullName>
        <label>Favorite Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_text__c</fullName>
        <label>Post text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retweet_Count__c</fullName>
        <label>Retweet Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sentiment_Score__c</fullName>
        <label>Sentiment Score</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sentiment_Type__c</fullName>
        <label>Sentiment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session_Booking__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Session Booking</label>
        <referenceTo>Session_Booking__c</referenceTo>
        <relationshipLabel>Social Posts</relationshipLabel>
        <relationshipName>Social_Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Score__c</fullName>
        <label>Session Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_User__c</fullName>
        <label>Social User</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Social Post</label>
    <nameField>
        <displayFormat>SP-{00000000}</displayFormat>
        <label>Social Post Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Social Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>